--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
   },
   "author": "daylilyfield",
   "license": "MIT",
+  "keywords": ['ctags', 'gulpplugin', 'gulp']
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/daylilyfield/gulp-ctags.git"
+  },
   "dependencies": {
     "through2": "^0.6.1"
   },
