--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-ctags",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "ctags plugin for gulp",
   "main": "lib/index.js",
   "scripts": {
@@ -8,26 +8,33 @@
   },
   "author": "daylilyfield",
   "license": "MIT",
-  "keywords": ["ctags", "gulpplugin", "gulp"],
+  "keywords": [
+    "ctags",
+    "gulpplugin",
+    "gulp"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/daylilyfield/gulp-ctags.git"
   },
   "dependencies": {
-    "through2": "^0.6.1"
+    "through2": "^0.6.3",
+    "gulp-util": "^3.0.4",
+    "vinyl": "^0.4.6",
+    "bluebird": "^2.9.21",
+    "debug": "^2.1.3",
+    "progress": "^1.1.8"
   },
   "peerDependencies": {
     "gulp": "3.x"
   },
   "devDependencies": {
-    "gulp": "^3.8.7",
-    "coffee-script": "^1.7.1",
+    "chai": "^2.2.0",
+    "coffee-script": "^1.9.1",
+    "gulp": "^3.8.11",
+    "gulp-coffee": "^2.3.1",
+    "gulp-mocha": "^2.0.1",
     "pipe-joint": "^0.1.3",
-    "gulp-mocha": "^1.0.0",
-    "chai": "^1.9.1",
-    "vinyl": "^0.3.2",
-    "event-stream": "^3.1.7",
-    "rimraf": "^2.2.8",
-    "gulp-coffee": "^2.1.1"
+    "vinyl-file": "^1.1.1"
   }
 }
